fix overlapping content

--- a/style.css
+++ b/style.css
@@ -6,35 +6,92 @@
 
 html {
     font-size: 10px;
+    overflow-x: hidden;
+}
+
+body {
+    font-family: 'Oswald', sans-serif;
+    color: white;
+}
+
+.space {
+    height: 5vh;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+.header {
+    width: 100%;
+    height: 5vh;
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    bottom: 0px;
+    background-color: tomato;
+    z-index: 1;
 }
 
 .wrapper {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
-    background-color: olive;
-    grid-auto-rows: 200px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-auto-rows: 250px;
+    gap: 1rem;
+    background-color: black;
+    /* margin: 30px; */
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 25s ease infinite;
 }
 
-.card{
-    background-color: orange;
+.card {
+    position: relative;
     border: solid;
-    width: auto;
-    height: auto;
+    /* width: auto;
+    height: auto; */
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(25px, 1fr));
-    /* grid-auto-rows: 30px; */
-    /* grid-auto-rows:; */
-    /* justify-content: ;
-     */
-     align-items: center;
-     /* justify-items: ; */
-     gap: 3px;
+    grid-template-columns: repeat(7, minmax(25px, 1fr));
+    align-items: center;
+    /* justify-items: ; */
+    gap: 3px;
+    border: solid 2px pink;
+    border-radius: 9px;
+    /* margin: px; */
+    background-color: white;
 }
 
-.card p {
-    height: 2.5rem;
-    background-color: white;
-    border-radius: 100%;
+.card>div {
+    background-color: black;
+    border-radius: 9px;
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    min-width: 60px;
+    width: min-content;
     text-align: center;
-    font-size: 1.5rem;
+    padding: px;
+    margin-bottom: 3px;
+    opacity: 0.7;
+}
+
+.card>p {
+    /* height: 2.5rem; */
+    background-color: black;
+    height: 100%;
+    width: 100%;
+    border-radius: 8px;
+    text-align: center;
+    font-size: 1.2rem;
+    word-spacing: 500px;
 }
